<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="150dp">



        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="11dp">

            <ImageView
                android:id="@+id/weatherImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="22dp"
                android:layout_marginTop="11dp"
                android:layout_marginEnd="8dp"
                android:src="@drawable/ic_nicubunu_weather_symbols_sun" />

            <TextView
                android:id="@+id/temperature"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="290dp"
                android:layout_marginTop="20dp"
                android:text="@string/Temp"
                android:textColor="@android:color/black"
                android:textSize="@dimen/text_size_big"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/timeValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/temperature"
                android:layout_marginStart="29dp"
                android:layout_marginTop="-46dp"
                android:layout_toEndOf="@+id/weatherImage"
                android:text="@string/timevalue"
                android:textSize="@dimen/text_size_small" />

            <TextView
                android:id="@+id/weatherNow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/timeValue"
                android:layout_alignStart="@+id/timeValue"
                android:layout_marginStart="1dp"
                android:layout_marginTop="14dp"
                android:text="@string/weatherNow"
                android:textSize="@dimen/text_size_small" />
        </RelativeLayout>


</androidx.cardview.widget.CardView>